@@ -1,0 +1,14 @@
+#
+# test out the spaceship operator with doubles.
+#
+
+@array = @(
+0.00000000000000000000043574857347858734,
+0.00000000000300000000043574857347858734,
+0.00000000000000000000043574857347958888,
+0.00000000000000000000053574857347858734,
+0.00000000000000000000073574857347858734,
+0.00000000000000000000023574857347858734);
+
+printAll(sort({ return $1 <=> $2; }, @array));
+
