@@ -1,0 +1,6 @@
+2.3574857347858734E-22
+4.357485734785873E-22
+4.357485734795889E-22
+5.357485734785873E-22
+7.357485734785873E-22
+3.0000000004357486E-12
